[modify] zone social was fixed layout broken after opening a modal.

--- a/src/client/app/zone/shared/ng2-hd/list/components/list.component.css
+++ b/src/client/app/zone/shared/ng2-hd/list/components/list.component.css
@@ -2,13 +2,17 @@
   overflow-y: auto;
   max-height: 375px;
   margin-right: -15px;
+  padding-right: 15px;
 }
-.hd-list{
+
+.hd-list {
   outline: none 0;
 }
-search-form{
+
+search-form {
   flex-grow: 1;
 }
+
 /*
 .hd-list {
   display: flex;
@@ -28,8 +32,9 @@ search-form{
   min-height: 32px;
   cursor: text;
 }
-.hd-list-selected-item{
-background: #e0e0e0;
+
+.hd-list-selected-item {
+  background: #e0e0e0;
   border-radius: 3px;
   height: 34px;
   margin: 0 5px 5px 0;
@@ -53,14 +58,17 @@ background: #e0e0e0;
   padding-right: 5px;
 
 }
-.hd-list-selected-item span{
+
+.hd-list-selected-item span {
   display: inline-block;
   padding-left: 10px;
 }
-.hd-list-selected-item img{
+
+.hd-list-selected-item img {
   width: 34px;
 }
-.hd-list__remove-button{
+
+.hd-list__remove-button {
   margin-top: 2px;
   cursor: pointer;
   border-radius: 50%;
@@ -84,119 +92,112 @@ background: #e0e0e0;
   font-family: "Roboto", "Helvetica Neue", sans-serif;
 }
 
-
 .hd-list__text-input:focus {
   outline: 0;
   box-shadow: none;
 }
 
-
 /*.hd-list:focus {*/
-  /*outline: 0; }*/
+/*outline: 0; }*/
 
 /*.hd-list-container {*/
-  /*flex-wrap: wrap;*/
-  /*display: flex; }*/
+/*flex-wrap: wrap;*/
+/*display: flex; }*/
 
 /*.hd-list form {*/
-  /*margin: 0.1em 0; }*/
-
-
-
-
+/*margin: 0.1em 0; }*/
 
 /*.hd-list--readonly {*/
-  /*cursor: default; }*/
+/*cursor: default; }*/
 
 /*.hd-list--readonly:focus, .tag {*/
-  /*outline: 0; }*/
+/*outline: 0; }*/
 
 /*.hd-list {*/
-  /*display: flex;*/
-  /*flex-direction: row;*/
-  /*flex-wrap: wrap;*/
-  /*font-family: "Roboto", "Helvetica Neue", sans-serif;*/
-  /*font-weight: 400;*/
-  /*font-size: 1em;*/
-  /*letter-spacing: 0.05rem;*/
-  /*outline: 0;*/
-  /*color: #222;*/
-  /*cursor: pointer;*/
-  /*border-radius: 16px;*/
-  /*transition: all 0.25s;*/
-  /*margin: 0.1rem 0.2rem;*/
-  /*padding: 0.08rem 0.45rem;*/
-  /*height: 32px;*/
-  /*line-height: 34px; }*/
+/*display: flex;*/
+/*flex-direction: row;*/
+/*flex-wrap: wrap;*/
+/*font-family: "Roboto", "Helvetica Neue", sans-serif;*/
+/*font-weight: 400;*/
+/*font-size: 1em;*/
+/*letter-spacing: 0.05rem;*/
+/*outline: 0;*/
+/*color: #222;*/
+/*cursor: pointer;*/
+/*border-radius: 16px;*/
+/*transition: all 0.25s;*/
+/*margin: 0.1rem 0.2rem;*/
+/*padding: 0.08rem 0.45rem;*/
+/*height: 32px;*/
+/*line-height: 34px; }*/
 
 /*.hd-list__remove-button {*/
-  /*margin-left: 3px;*/
-  /*width: 16px;*/
-  /*height: 26px;*/
-  /*align-self: center;*/
-  /*transition: all 0.15s; }*/
+/*margin-left: 3px;*/
+/*width: 16px;*/
+/*height: 26px;*/
+/*align-self: center;*/
+/*transition: all 0.15s; }*/
 
 /*.hd-list__remove-button:hover {*/
-  /*transform: scale(1.3); }*/
+/*transform: scale(1.3); }*/
 
 /*.hd-list__error-message {*/
-  /*font-size: 0.8em;*/
-  /*color: #f44336;*/
-  /*margin: 0.5em 0; }*/
+/*font-size: 0.8em;*/
+/*color: #f44336;*/
+/*margin: 0.5em 0; }*/
 
 /*.default.hd-list--invalid,*/
 /*.minimal.hd-list--invalid,*/
 /*.dark.hd-list--invalid {*/
-  /*border-bottom: 2px solid #f44336; }*/
+/*border-bottom: 2px solid #f44336; }*/
 
 /*.hd-list.default {*/
-  /*border-bottom: 2px solid #efefef; }*/
+/*border-bottom: 2px solid #efefef; }*/
 
 /*.default.hd-list--focused {*/
-  /*border-bottom: 2px solid #2196F3; }*/
+/*border-bottom: 2px solid #2196F3; }*/
 
 /*.default .hd-list {*/
-  /*background: #efefef; }*/
+/*background: #efefef; }*/
 
 /*.default .hd-list:not(.hd-list--readonly):focus {*/
-  /*background: #2196F3;*/
-  /*color: #fff; }*/
+/*background: #2196F3;*/
+/*color: #fff; }*/
 
 /*.default .hd-list:not(:focus):not(.hd-list--readonly):hover {*/
-  /*background: #e6e6e6; }*/
+/*background: #e6e6e6; }*/
 
 /*.default .hd-list:focus path {*/
-  /*fill: #fff; }*/
+/*fill: #fff; }*/
 
 /*.hd-list.minimal {*/
-  /*border-bottom: 1px solid transparent; }*/
+/*border-bottom: 1px solid transparent; }*/
 
 /*.minimal .hd-list {*/
-  /*background: #f9f9f9;*/
-  /*border-radius: 0; }*/
+/*background: #f9f9f9;*/
+/*border-radius: 0; }*/
 
 /*.minimal .hd-list:not(.hd-list--readonly):focus {*/
-  /*background: #ddd; }*/
+/*background: #ddd; }*/
 
 /*.minimal .hd-list:not(:focus):not(.hd-list--readonly):hover {*/
-  /*background: #f0f0f0; }*/
+/*background: #f0f0f0; }*/
 
 /*.minimal .hd-list:not(:focus):not(.hd-list--readonly):hover {*/
-  /*background: #f0f0f0; }*/
+/*background: #f0f0f0; }*/
 
 /*.hd-list.dark {*/
-  /*border-bottom: 2px solid #212121; }*/
+/*border-bottom: 2px solid #212121; }*/
 
 /*.dark .hd-list {*/
-  /*background: #212121;*/
-  /*color: #f9f9f9; }*/
-
+/*background: #212121;*/
+/*color: #f9f9f9; }*/
 
 /*.dark .hd-list:not(.hd-list--readonly):focus {*/
-  /*background: #999;*/
-  /*color: #212121; }*/
+/*background: #999;*/
+/*color: #212121; }*/
 
 /*.dark path {*/
-  /*fill: #fff; }*/
+/*fill: #fff; }*/
 
 /*!*# sourceMappingURL=list.component.css.map *!*/
